# builder-for-morphe

./: AUTHORS  Affan-Backup-V7.json  CONTRIBUTING.md  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: build.yml  sync.yml
icons/: README.md
src/core/: builder.py  config.py  gh_utils.py  logger.py  network.py  patcher.py  prebuilts.py
src/scrapers/: apkmirror.py  base.py  github.py  uptodown.py
src/scripts/: logs.py  matrix.py  telegram.py
